--- a/design.ui
+++ b/design.ui
@@ -6,7 +6,7 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>1056</width>
+    <width>1105</width>
     <height>832</height>
    </rect>
   </property>
@@ -64,6 +64,26 @@
         </property>
        </widget>
       </item>
+      <item alignment="Qt::AlignHCenter">
+       <widget class="QLabel" name="sizeLabel">
+        <property name="text">
+         <string>Размер</string>
+        </property>
+        <property name="alignment">
+         <set>Qt::AlignCenter</set>
+        </property>
+       </widget>
+      </item>
+      <item>
+       <widget class="QLineEdit" name="sizeEdit">
+        <property name="alignment">
+         <set>Qt::AlignCenter</set>
+        </property>
+        <property name="placeholderText">
+         <string>3</string>
+        </property>
+       </widget>
+      </item>
       <item>
        <spacer name="verticalSpacer_2">
         <property name="orientation">
@@ -81,7 +101,7 @@
        </spacer>
       </item>
       <item>
-       <widget class="QLabel" name="label_2">
+       <widget class="QLabel" name="filterLabel">
         <property name="text">
          <string>Фильтр:</string>
         </property>
@@ -233,6 +253,9 @@
         <property name="text">
          <string>Ваше изображение:</string>
         </property>
+        <property name="alignment">
+         <set>Qt::AlignLeading|Qt::AlignLeft|Qt::AlignVCenter</set>
+        </property>
        </widget>
       </item>
       <item>
@@ -267,6 +290,9 @@
        <widget class="QLabel" name="label_4">
         <property name="text">
          <string>Фильтрованное изображение:</string>
+        </property>
+        <property name="alignment">
+         <set>Qt::AlignLeading|Qt::AlignLeft|Qt::AlignVCenter</set>
         </property>
        </widget>
       </item>
@@ -310,7 +336,7 @@
     <rect>
      <x>0</x>
      <y>0</y>
-     <width>1056</width>
+     <width>1105</width>
      <height>29</height>
     </rect>
    </property>
